--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-toastify": "^7.0.4",
-    "reactive-button": "^1.3.6"
+    "reactive-button": "^1.3.6",
+    "heap-js": "^2.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
