--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
         
       # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
       - name: setup git config
         run: |
-          git config user.name "Sadanand Pai"
-          git config user.email "sadypai@gmail.com"
+          git config user.name "nick-bigger"
+          git config user.email "nick.bigger@gmail.com"
       # Runs a set of commands using the runners shell
       - name: setup deployment
         run: |
